@@ -136,6 +136,16 @@ differ in how they derive the name of the output file.
   base name of the input file (without directories and extension).
 
 
+run_process.h
+-------------
+
+The run_process method executed the given command with given arguments, and
+optionally captured standard output of the command.
+
+The API also offers the possibility of providing standard input and/or capturing
+standard error output, but that functionality is currently not implemented.
+
+
 split.h
 -------
 
