@@ -3,6 +3,7 @@ compile_test
 compile_test_bundle
 named_values_test
 parse_value_test
+run_process_test
 threadsafe_resource_loader_burn_test
 threadsafe_resource_loader_test
 url_detector_test
